2010-12-09  Scott James Remnant  <scott@netsplit.com>

	* init/tests/test_job.c (test_change_state): Add missing
	DBUS_TYPE_INVALID to dbus_message_get_args() call.

2010-12-08  Colin Watson  <cjwatson@debian.org>

	* dbus/com.ubuntu.Upstart.Instance.xml (GoalChanged, StateChanged)
	(Failed): New signals.
	* init/job.c (job_change_goal): Emit GoalChanged signal after
	(job_change_state): Emit StateChanged signal after changing state.
	(job_failed): Emit Failed signal after marking job as failed.
	* init/tests/test_job.c (test_change_goal): Test for this.
	(test_change_state): Test for this.
	* NEWS: Update.

2010-12-08  James Hunt  <jhunt@ubuntu.com>

	* init/event.c, init/event_operator.c: Fix grammar and factual errors
	in comments.
	* init/man/init.5: Fix grammar errors and clarify export behaviour.

2010-12-08  Clint Byrum  <clint@ubuntu.com>

	* init/man/init.5: Typo existing -> exiting

2010-08-12  Scott James Remnant  <scott@netsplit.com>

	* init/job_process.c (job_process_spawn): We can fail to open the
	system console for various reasons, sometimes because there isn't
	a console (ENXIO or ENODEV) but worse due to kernel race conditions
	on SMP/multi-core systems (EIO).  If "console output" is used, and
	these happen, fall back to /dev/null.

2010-04-27  Scott James Remnant  <scott@netsplit.com>

	* configure.ac: Bump version to 0.6.7
	* NEWS: Begin new release

	* NEWS: Release 0.6.6

	* configure.ac: Bump the requirement of libnih to 1.0.2 after
	verifying that building using --with-local-libnih and an earlier
	version installed still works.

2010-04-24  Scott James Remnant  <scott@netsplit.com>

	* configure.ac: Replace the --with-local-libnih code with an
	expansion of the NIH_WITH_LOCAL_LIBNIH macro that now contains it.
	* README: Bump libnih version.

2010-03-31  Colin Watson  <cjwatson@ubuntu.com>

	* init/man/init.5 (env): Document behaviour when the environment
	variable's value is omitted.